--- a/project/SrezShend/MainWindow.xaml
+++ b/project/SrezShend/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SrezShend"
         mc:Ignorable="d"
-        Title="Одежда для ручек" Height="450" Width="800" MinWidth="800" MinHeight="500" Icon="materials/Одежда для ручек.ico">
+        Title="Одежда для ручек" Height="450" Width="800" MinWidth="800" MinHeight="500" Icon="materials/Одежда для ручек.ico"
+        WindowStartupLocation="CenterScreen">
     <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="73*"/>
@@ -19,6 +20,6 @@
             <TextBlock Text="Одежда для ручек" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Margin="15" Width="209"/>
         </StackPanel>
         <Button x:Name="btnBack" Content="Назад" Click="btnBack_Click" HorizontalAlignment="Right" Width="147" Height="40" Margin="10" Background="#FFA5E887"/>
-        <Frame Name="FrmMain" Grid.Row="1" NavigationUIVisibility="Hidden"/>
+        <Frame Name="FrmMain" Grid.Row="1" NavigationUIVisibility="Hidden" ContentRendered="FrmMain_ContentRendered"/>
     </Grid>
 </Window>
