--- a/project/SrezShend/Pages/PageMaterials.xaml
+++ b/project/SrezShend/Pages/PageMaterials.xaml
@@ -19,6 +19,15 @@
             <TextBox x:Name="tbFind" Margin="10" TextChanged="tbFind_TextChanged" Width="196"/>
             <ComboBox Name="cbSort" Margin="10" SelectionChanged="cbSort_SelectionChanged" Width="199"/>
             <ComboBox Name="cbFilter" Margin="10" SelectionChanged="cbFilter_SelectionChanged" Width="199"/>
+            <StackPanel 
+                HorizontalAlignment="Center" 
+                VerticalAlignment="Center" 
+                Orientation="Horizontal">
+                <TextBlock Text="Записей: "/>
+                <TextBlock x:Name="tbCount" Text="0"/>
+                <TextBlock Text=". Всего: "/>
+                <TextBlock x:Name="tbCountAll" Text="0"/>
+            </StackPanel>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center">
