--- a/project/SrezShend/Pages/PageAddMat.xaml
+++ b/project/SrezShend/Pages/PageAddMat.xaml
@@ -7,33 +7,28 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PageAddMat">
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="38*"/>
             <RowDefinition Height="7*"/>
         </Grid.RowDefinitions>
-
-        <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Margin="329,10" Width="142">
-            <Button x:Name="btnSave" Content="Сохранить" Click="btnSave_Click" Height="51" Background="#FFA5E887"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Stretch">
+            <Button x:Name="btnSave" Content="Сохранить" Click="btnSave_Click" VerticalAlignment="Stretch" Width="174" Margin="10" HorizontalAlignment="Stretch" Background="#FFA5E887"/>
         </StackPanel>
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="171*"/>
                 <ColumnDefinition Width="629*"/>
             </Grid.ColumnDefinitions>
-
             <StackPanel Grid.Column="0">
                 <Button x:Name="btnAddImage" Content="Добавить изображение" Click="btnAddImage_Click" Margin="15" Background="#FFA5E887"/>
                 <TextBlock Name="tbImage" Margin="5"/>
             </StackPanel>
-
             <Grid Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
@@ -42,7 +37,6 @@
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-
                 <StackPanel Grid.Row="0" Grid.Column="0" Margin="3" Orientation="Vertical">
                     <TextBlock Text="Название материала"/>
                     <TextBox Name="tbTitle" Margin="3"/>
@@ -51,7 +45,6 @@
                     <TextBlock Text="Количество в коробке"/>
                     <TextBox Name="tbCountInPack" Margin="3"/>
                 </StackPanel>
-
                 <StackPanel Grid.Row="1" Grid.Column="0" Margin="3" Orientation="Vertical">
                     <TextBlock Text="Тип Материала"/>
                     <ComboBox Name="cbType" Margin="3"/>
@@ -60,7 +53,6 @@
                     <TextBlock Text="Единица измерения"/>
                     <TextBox Name="tbUnit" Margin="3"/>
                 </StackPanel>
-
                 <StackPanel Grid.Row="2" Grid.Column="0" Margin="3" Orientation="Vertical">
                     <TextBlock Text="Количество на складе"/>
                     <TextBox Name="tbCountInStock" Margin="3"/>
@@ -69,12 +61,11 @@
                     <TextBlock Text="Минимальное количество"/>
                     <TextBox Name="tbMinCount" Margin="3"/>
                 </StackPanel>
-
                 <StackPanel Grid.Row="3" Grid.Column="0" Margin="3" Orientation="Vertical">
                     <TextBlock Text="Стоимость"/>
                     <TextBox Name="tbCost" Margin="3"/>
                 </StackPanel>
-                
+
             </Grid>
         </Grid>
     </Grid>
