--- a/project/SrezShend/MainWindow.xaml
+++ b/project/SrezShend/MainWindow.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SrezShend"
         mc:Ignorable="d"
-        Title="Одежда для ручек" Height="450" Width="800" MinWidth="800" MinHeight="500" Icon="materials/Одежда для ручек.ico">
+        Title="Одежда для ручек" Height="600" Width="900" MinWidth="900" MinHeight="600" 
+        WindowStartupLocation="CenterScreen"
+        Icon="materials/Одежда для ручек.ico">
     <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="60px"/>
