--- a/project/SrezShend/Pages/PageMaterials.xaml
+++ b/project/SrezShend/Pages/PageMaterials.xaml
@@ -15,53 +15,64 @@
             <RowDefinition Height="60px"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Horizontal" 
-                    Grid.Row="0" 
-                    HorizontalAlignment="Stretch">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
 
             <TextBox  Name="tbFind"     
                       TextChanged="tbFind_TextChanged"           
-                      Width="200"/>
-            <ComboBox Name="cbSort"     
+                      />
+            <ComboBox Name="cbSort" 
+                      Grid.Column="1"
                       SelectionChanged="cbSort_SelectionChanged" 
-                      Width="200"/>
-            <ComboBox Name="cbFilter"   
+                      />
+            <ComboBox Name="cbFilter"  
+                      Grid.Column="2"
                       SelectionChanged="cbFilter_SelectionChanged" 
-                      Width="200"/>
+                      />
             <StackPanel 
-                HorizontalAlignment="Center" 
-                VerticalAlignment="Center" 
-                Orientation="Horizontal">
+                      Grid.Column="3"
+                      HorizontalAlignment="Center" 
+                      VerticalAlignment="Center" 
+                      Orientation="Horizontal">
                 <TextBlock Text="Записей: "/>
                 <TextBlock x:Name="tbCount" Text="0"/>
                 <TextBlock Text=". Всего: "/>
                 <TextBlock x:Name="tbCountAll" Text="0"/>
             </StackPanel>
 
-        </StackPanel>
+        </Grid>
 
-        <StackPanel Orientation="Horizontal" 
-                    Grid.Row="2" 
-                    HorizontalAlignment="Center" 
-                    VerticalAlignment="Stretch">
+        <Grid
+            Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
 
             <Button x:Name="AddMat"  
                     Content="Добавить" 
                     Click="AddMat_Click" 
-                    Width="174" 
                     Background="#FFA5E887"/>
             <Button x:Name="EditMat" 
                     Content="Изменить" 
                     Click="EditMat_Click" 
-                    Width="174" 
-                    Background="#FFA5E887"/>
+                    Background="#FFA5E887"
+                    Grid.Column="1"/>
             <Button x:Name="DelMat" 
                     Content="Удалить" 
                     Click="DelMat_Click" 
-                    Width="174" 
-                    Background="#FFA5E887"/>
+                    Background="#FFA5E887"
+                    Grid.Column="2"/>
+            <Label Grid.Column="3">Пагинация</Label>
 
-        </StackPanel>
+        </Grid>
         <ListBox x:Name="lbMat" 
                  Grid.Row="1" 
                  HorizontalContentAlignment="Stretch">
@@ -98,7 +109,7 @@
                                 Margin="5" >
                             <Border.Background>
                                 <ImageBrush Stretch="UniformToFill" 
-                                            ImageSource="{Binding Image}" />
+                                            ImageSource="{Binding ValidImage}" />
                             </Border.Background>
                         </Border>
 
@@ -119,7 +130,7 @@
 
                             <TextBlock  Margin="3">
                             <Run Text="Поставщики: "/>
-                            <Run Text="{Binding MaterialSupplier.SupplierId.Title}"/>
+                            <Run Text="{Binding ValidSuppliers, Mode=OneWay}"/>
                             </TextBlock>
 
                         </StackPanel>
