--- a/project/SrezShend/App.xaml
+++ b/project/SrezShend/App.xaml
@@ -11,6 +11,7 @@
             <Setter Property="VerticalAlignment" Value="Stretch" />
             <Setter Property="FontSize" Value="20" />
             <Setter Property="Margin" Value="10" />
+            <Setter Property="Background" Value="#FFA5E887" />
             <Style.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" 
@@ -27,6 +28,10 @@
         <Style TargetType="Label">
             <Setter Property="FontFamily" Value="Candara" />
             <Setter Property="FontSize" Value="20" />
+        </Style>
+        <Style TargetType="RadioButton">
+            <Setter Property="FontFamily" Value="Candara" />
+            <Setter Property="FontSize" Value="16" />
         </Style>
 
         <Style TargetType="TextBox">
