--- a/project/SrezShend/MainWindow.xaml
+++ b/project/SrezShend/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SrezShend"
         mc:Ignorable="d"
-        Title="Одежда для ручек" Height="450" Width="800" MinWidth="800" MinHeight="500" Icon="materials/Одежда для ручек.ico">
+        Title="Одежда для ручек" Height="750" Width="1000" MinWidth="1000" MinHeight="750" Icon="materials/Одежда для ручек.ico"
+        WindowStartupLocation="CenterScreen">
     <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="60px"/>
