--- a/project/SrezShend/Pages/PageMaterials.xaml
+++ b/project/SrezShend/Pages/PageMaterials.xaml
@@ -14,61 +14,83 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="60px"/>
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal" Grid.Row="0">
-            <TextBox x:Name="tbFind" Margin="10" TextChanged="tbFind_TextChanged" Width="196"/>
-            <ComboBox Name="cbSort" Margin="10" SelectionChanged="cbSort_SelectionChanged" Width="199"/>
-            <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-                <RadioButton x:Name="rbAsc" Content="По возрастанию" IsChecked="True" Click="radioButton_Click"/>
-                <RadioButton x:Name="rbDesc" Content="По убыванию" Click="radioButton_Click"/>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <TextBox 
+                x:Name="tbFind" 
+                Margin="10" 
+                TextChanged="tbFind_TextChanged"
+                Grid.Column="0"
+                VerticalContentAlignment="Center"/>
+            
+            <ComboBox 
+                Name="cbFilter" 
+                Margin="10" 
+                SelectionChanged="cbFilter_SelectionChanged"
+                Grid.Column="1"/>
+            
+            <ComboBox 
+                Name="cbSort" 
+                Margin="10" 
+                SelectionChanged="cbSort_SelectionChanged" 
+                Grid.Column="2"/>
+            <StackPanel VerticalAlignment="Center" 
+                        HorizontalAlignment="Center"
+                        Grid.Column="3">
+                <RadioButton 
+                    x:Name="rbAsc" 
+                    Content="По возрастанию" 
+                    IsChecked="True" 
+                    Click="radioButton_Click"/>
+                <RadioButton 
+                    x:Name="rbDesc"
+                    Content="По убыванию"
+                    Click="radioButton_Click"/>
             </StackPanel>
-            <ComboBox Name="cbFilter" Margin="10" SelectionChanged="cbFilter_SelectionChanged" Width="199"/>
-        <StackPanel Orientation="Horizontal" 
-                    Grid.Row="0" 
-                    HorizontalAlignment="Stretch">
-
-            <TextBox  Name="tbFind"     
-                      TextChanged="tbFind_TextChanged"           
-                      Width="200"/>
-            <ComboBox Name="cbSort"     
-                      SelectionChanged="cbSort_SelectionChanged" 
-                      Width="200"/>
-            <ComboBox Name="cbFilter"   
-                      SelectionChanged="cbFilter_SelectionChanged" 
-                      Width="200"/>
             <StackPanel 
                 HorizontalAlignment="Center" 
                 VerticalAlignment="Center" 
-                Orientation="Horizontal">
-                <TextBlock Text="Записей: "/>
-                <TextBlock x:Name="tbCount" Text="0"/>
-                <TextBlock Text=". Всего: "/>
-                <TextBlock x:Name="tbCountAll" Text="0"/>
+                Orientation="Horizontal"
+                Grid.Column="4">
+                <TextBlock FontSize="15" Text="Записей: "/>
+                <TextBlock FontSize="15" x:Name="tbCount" Text="0"/>
+                <TextBlock FontSize="15" Text=". Всего: "/>
+                <TextBlock FontSize="15" x:Name="tbCountAll" Text="0"/>
             </StackPanel>
+        </Grid>
 
-        </StackPanel>
-
-        <StackPanel Orientation="Horizontal" 
-                    Grid.Row="2" 
-                    HorizontalAlignment="Center" 
-                    VerticalAlignment="Stretch">
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
 
             <Button x:Name="AddMat"  
                     Content="Добавить" 
                     Click="AddMat_Click" 
-                    Width="174" 
-                    Background="#FFA5E887"/>
+                    Background="#FFA5E887"
+                    Grid.Column="0"/>
             <Button x:Name="EditMat" 
                     Content="Изменить" 
-                    Click="EditMat_Click" 
-                    Width="174" 
-                    Background="#FFA5E887"/>
-            <Button x:Name="DelMat" 
+                    Click="EditMat_Click"  
+                    Background="#FFA5E887"
+                    Grid.Column="1"/>
+            <!--<Button x:Name="DelMat" 
                     Content="Удалить" 
                     Click="DelMat_Click" 
-                    Width="174" 
-                    Background="#FFA5E887"/>
+                    Background="#FFA5E887"/>-->
 
-        </StackPanel>
+            <Grid Grid.Column="3" Name="gridSwitcher" HorizontalAlignment="Right" Margin="10" VerticalAlignment="Center"/>
+
+        </Grid>
         <ListBox x:Name="lbMat" 
                  Grid.Row="1" 
                  HorizontalContentAlignment="Stretch">
@@ -105,7 +127,7 @@
                                 Margin="5" >
                             <Border.Background>
                                 <ImageBrush Stretch="UniformToFill" 
-                                            ImageSource="{Binding Image}" />
+                                            ImageSource="{Binding ValidImage}" />
                             </Border.Background>
                         </Border>
 
@@ -123,10 +145,11 @@
                             <Run Text="Минимальное количество: "/>
                             <Run Text="{Binding MinCount}"/>
                             </TextBlock>
-
-                            <TextBlock  Margin="3">
+                            
+                            <!-- TODO: Добваить перенос поставщиков по строкам -->
+                            <TextBlock  Margin="3" TextWrapping="Wrap">
                             <Run Text="Поставщики: "/>
-                            <Run Text="{Binding MaterialSupplier.SupplierId.Title}"/>
+                            <Run Text="{Binding ValidSuppliers, Mode=OneWay}"/>
                             </TextBlock>
 
                         </StackPanel>
