--- a/project/SrezShend/Pages/PageAddMat.xaml
+++ b/project/SrezShend/Pages/PageAddMat.xaml
@@ -5,68 +5,88 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SrezShend.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="750" d:DesignWidth="1000"
       Title="PageAddMat">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="38*"/>
-            <RowDefinition Height="7*"/>
+            <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Stretch">
-            <Button x:Name="btnSave" Content="Сохранить" Click="btnSave_Click" VerticalAlignment="Stretch" Width="174" Margin="10" HorizontalAlignment="Stretch" Background="#FFA5E887"/>
-        </StackPanel>
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="171*"/>
-                <ColumnDefinition Width="629*"/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="250"/>
+                <ColumnDefinition Width="750"/>
+                <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <StackPanel Grid.Column="0">
-                <Button x:Name="btnAddImage" Content="Добавить изображение" Click="btnAddImage_Click" Margin="15" Background="#FFA5E887"/>
+            <StackPanel Grid.Column="1">
+                <Button x:Name="btnAddImage"  Click="btnAddImage_Click" Margin="15" Background="#FFA5E887">
+                    <TextBlock TextWrapping="Wrap" Margin="5">Добавить изображение</TextBlock>
+                </Button>
                 <TextBlock Name="tbImage" Margin="5"/>
             </StackPanel>
-            <Grid Grid.Column="1">
+            <Grid Grid.Column="2" Margin="10">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="300"/>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="300"/>
                 </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <StackPanel Grid.Row="0" Grid.Column="0" Margin="3" Orientation="Vertical">
-                    <TextBlock Text="Название материала"/>
-                    <TextBox Name="tbTitle" Margin="3"/>
-                </StackPanel>
-                <StackPanel Grid.Row="0" Grid.Column="1" Margin="3" Orientation="Vertical">
-                    <TextBlock Text="Количество в коробке"/>
-                    <TextBox Name="tbCountInPack" Margin="3"/>
-                </StackPanel>
-                <StackPanel Grid.Row="1" Grid.Column="0" Margin="3" Orientation="Vertical">
-                    <TextBlock Text="Тип Материала"/>
-                    <ComboBox Name="cbType" Margin="3"/>
-                </StackPanel>
-                <StackPanel Grid.Row="1" Grid.Column="1" Margin="3" Orientation="Vertical">
-                    <TextBlock Text="Единица измерения"/>
-                    <TextBox Name="tbUnit" Margin="3"/>
-                </StackPanel>
-                <StackPanel Grid.Row="2" Grid.Column="0" Margin="3" Orientation="Vertical">
-                    <TextBlock Text="Количество на складе"/>
-                    <TextBox Name="tbCountInStock" Margin="3"/>
-                </StackPanel>
-                <StackPanel Grid.Row="2" Grid.Column="1" Margin="3" Orientation="Vertical">
-                    <TextBlock Text="Минимальное количество"/>
-                    <TextBox Name="tbMinCount" Margin="3"/>
-                </StackPanel>
-                <StackPanel Grid.Row="3" Grid.Column="0" Margin="3" Orientation="Vertical">
-                    <TextBlock Text="Стоимость"/>
-                    <TextBox Name="tbCost" Margin="3"/>
-                </StackPanel>
+                <StackPanel Orientation="Vertical">
+                    <StackPanel Grid.Row="0" Grid.Column="0" Margin="3" Orientation="Vertical">
+                        <TextBlock Text="Название материала"/>
+                        <TextBox Name="tbTitle" Margin="3"/>
+                    </StackPanel>
+                    <StackPanel Grid.Row="1" Grid.Column="0" Margin="3" Orientation="Vertical">
+                        <TextBlock Text="Тип Материала"/>
+                        <ComboBox Name="cbType" Margin="3"/>
+                    </StackPanel>
 
+                    <StackPanel Grid.Row="2" Grid.Column="0" Margin="3" Orientation="Vertical">
+                        <TextBlock Text="Количество на складе"/>
+                        <TextBox Name="tbCountInStock" Margin="3"/>
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel Orientation="Vertical" Grid.Column="2">
+                    <StackPanel Grid.Row="3" Grid.Column="0" Margin="3" Orientation="Vertical">
+                        <TextBlock Text="Стоимость"/>
+                        <TextBox Name="tbCost" Margin="3"/>
+                    </StackPanel>
+                    <StackPanel Grid.Row="0" Grid.Column="2" Margin="3" Orientation="Vertical">
+                        <TextBlock Text="Количество в коробке"/>
+                        <TextBox Name="tbCountInPack" Margin="3"/>
+                    </StackPanel>
+                    <StackPanel Grid.Row="2" Grid.Column="2" Margin="3" Orientation="Vertical">
+                        <TextBlock Text="Минимальное количество"/>
+                        <TextBox Name="tbMinCount" Margin="3"/>
+                    </StackPanel>
+                    <StackPanel Grid.Row="1" Grid.Column="2" Margin="3" Orientation="Vertical">
+                        <TextBlock Text="Единица измерения"/>
+                        <TextBox Name="tbUnit" Margin="3"/>
+                    </StackPanel>
+                </StackPanel>
             </Grid>
         </Grid>
+        <Grid Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="200"/>
+            </Grid.ColumnDefinitions>
+            <Button x:Name="btnSave"
+                    Content="Сохранить" 
+                    Click="btnSave_Click"
+                    VerticalAlignment="Stretch" 
+                    Margin="10" 
+                    HorizontalAlignment="Stretch"
+                    Background="#FFA5E887"
+                    Grid.Column="2"/>
+            <Button x:Name="DelMat" 
+                    Grid.Column="0"
+                    Content="Удалить" 
+                    Click="DelMat_Click" 
+                    Background="#FFA5E887"/>
+            
+        </Grid>
+       
     </Grid>
 </Page>
