--- a/project/SrezShend/Pages/PageAddMat.xaml
+++ b/project/SrezShend/Pages/PageAddMat.xaml
@@ -20,10 +20,8 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="1">
-                <Button x:Name="btnAddImage"  Click="btnAddImage_Click" Margin="15" Background="#FFA5E887">
-                    <TextBlock TextWrapping="Wrap" Margin="5">Добавить изображение</TextBlock>
-                </Button>
-                <TextBlock Name="tbImage" Margin="5"/>
+                <Image Width="128" Height="128" Margin="0, 10, 0, 10" Name="imgMaterial"/>
+                <Button x:Name="btnAddImage" Content="Добавить изображение" Click="btnAddImage_Click" Margin="15" Background="#FFA5E887"/>
             </StackPanel>
             <Grid Grid.Column="2" Margin="10">
                 <Grid.ColumnDefinitions>
