--- a/project/SrezShend/Pages/WindowSelectImage.xaml
+++ b/project/SrezShend/Pages/WindowSelectImage.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:SrezShend.Pages"
         mc:Ignorable="d"
         Title="Выбор картинки" Height="500" Width="500"
-        ResizeMode="NoResize" Icon="../materials/Одежда для ручек.ico"
+        ResizeMode="NoResize" Icon="../img/icons/Одежда для ручек.ico"
         WindowStartupLocation="CenterScreen">
     
     <Grid Name="gridMain"/>
