New patch 1.1090039/985@9348-2-34.beta-1488  - перенесены картинки в попку img  - пофикшен баг с выбором картинки  - добавлена функция которая меняет адрес картинки на полный  - добавлен перенос поставщиков

--- a/project/SrezShend/Pages/PageAddMat.xaml
+++ b/project/SrezShend/Pages/PageAddMat.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:SrezShend.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="750" d:DesignWidth="1000"
-      Title="PageAddMat">
+      Title="PageAddMat" Loaded="Page_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="38*"/>
